# src/main/java/com/verint/todoapi/ToDoController.java
@@ -40,4 +40,9 @@ public class ToDoController implements TodosApi {
         return response;
     }
 
+    @Override
+    public ResponseEntity<ToDoDTO> editToDo(Long id, ToDoDTO body) {
+        return ResponseEntity.ok(toDoService.edit(id,body));
+    }
+
 }
